syntax = "proto3";

package com.netifi.quickstart.service;

service HelloService {

    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    rpc fireAndForget(HelloRequest) returns (Empty) {}
    rpc longWinded(HelloRequest) returns (stream HelloResponse) {}
    rpc conversation(stream HelloRequest) returns (stream HelloResponse) {}
}

message Empty{}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
